[gd_scene load_steps=58 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/RobotFree/png/Run (2).png" type="Texture" id=2]
[ext_resource path="res://Bullet.gd" type="Script" id=3]
[ext_resource path="res://PhysicsHelper.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Juhani Junkala [Retro Game Music Pack] Level 1.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/RobotFree/png/Run (1).png" type="Texture" id=6]
[ext_resource path="res://Sprites/RobotFree/png/Run (3).png" type="Texture" id=7]
[ext_resource path="res://Sprites/RobotFree/png/Run (5).png" type="Texture" id=8]
[ext_resource path="res://Sprites/RobotFree/png/Run (6).png" type="Texture" id=9]
[ext_resource path="res://Sprites/RobotFree/png/Run (8).png" type="Texture" id=10]
[ext_resource path="res://Sprites/RobotFree/png/Run (7).png" type="Texture" id=11]
[ext_resource path="res://Sprites/RobotFree/png/Run (4).png" type="Texture" id=12]
[ext_resource path="res://Sprites/RobotFree/png/Idle (9).png" type="Texture" id=13]
[ext_resource path="res://Sprites/RobotFree/png/Idle (4).png" type="Texture" id=14]
[ext_resource path="res://Sprites/RobotFree/png/Idle (8).png" type="Texture" id=15]
[ext_resource path="res://Sprites/RobotFree/png/Idle (1).png" type="Texture" id=16]
[ext_resource path="res://Sprites/RobotFree/png/Idle (5).png" type="Texture" id=17]
[ext_resource path="res://Sprites/RobotFree/png/Idle (7).png" type="Texture" id=18]
[ext_resource path="res://Sprites/RobotFree/png/Idle (6).png" type="Texture" id=19]
[ext_resource path="res://Sprites/RobotFree/png/Idle (2).png" type="Texture" id=20]
[ext_resource path="res://Sprites/RobotFree/png/Idle (3).png" type="Texture" id=21]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (1).png" type="Texture" id=22]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (8).png" type="Texture" id=23]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (2).png" type="Texture" id=24]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (7).png" type="Texture" id=25]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (3).png" type="Texture" id=26]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (9).png" type="Texture" id=27]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (4).png" type="Texture" id=28]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (6).png" type="Texture" id=29]
[ext_resource path="res://Sprites/RobotFree/png/RunShoot (5).png" type="Texture" id=30]
[ext_resource path="res://Sprites/RobotFree/png/Shoot (2).png" type="Texture" id=31]
[ext_resource path="res://Sprites/RobotFree/png/Shoot (1).png" type="Texture" id=32]
[ext_resource path="res://Sprites/RobotFree/png/Shoot (4).png" type="Texture" id=33]
[ext_resource path="res://Sprites/RobotFree/png/Shoot (3).png" type="Texture" id=34]
[ext_resource path="res://Sprites/lightning/11.png" type="Texture" id=35]
[ext_resource path="res://Sprites/lightning/10.png" type="Texture" id=36]
[ext_resource path="res://Sprites/lightning/03.png" type="Texture" id=37]
[ext_resource path="res://Sprites/lightning/06.png" type="Texture" id=38]
[ext_resource path="res://Sprites/lightning/09.png" type="Texture" id=39]
[ext_resource path="res://Sprites/lightning/01.png" type="Texture" id=40]
[ext_resource path="res://Sprites/lightning/04.png" type="Texture" id=41]
[ext_resource path="res://Sprites/lightning/07.png" type="Texture" id=42]
[ext_resource path="res://Sprites/lightning/00.png" type="Texture" id=43]
[ext_resource path="res://Sprites/lightning/08.png" type="Texture" id=44]
[ext_resource path="res://Sprites/lightning/05.png" type="Texture" id=45]
[ext_resource path="res://Sprites/lightning/15.png" type="Texture" id=46]
[ext_resource path="res://Sprites/lightning/16.png" type="Texture" id=47]
[ext_resource path="res://Sprites/lightning/12.png" type="Texture" id=48]
[ext_resource path="res://Sprites/lightning/13.png" type="Texture" id=49]
[ext_resource path="res://Sprites/lightning/17.png" type="Texture" id=50]
[ext_resource path="res://Sprites/lightning/14.png" type="Texture" id=51]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.0458, 36.9363 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.9558, 34.3172 )

[sub_resource type="CircleShape2D" id=3]
radius = 19.7887

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18.2158, 10 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle_shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 30 ), ExtResource( 23 ), ExtResource( 27 ) ],
"loop": true,
"name": "run_shoot",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 43 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 39 ), ExtResource( 51 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 46 ) ],
"loop": true,
"name": "lightning",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
z_index = 1
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.33333, 6 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.66667, 4 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -2, 21.3333 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 10000
limit_bottom = 0
smoothing_enabled = true
smoothing_speed = 7.0

[node name="BulletKinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletKinematicBody2D"]
shape = SubResource( 4 )
disabled = true

[node name="BulletPoint" type="Node2D" parent="BulletKinematicBody2D"]
position = Vector2( 35, 0 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.133333, 0.133333 )
frames = SubResource( 5 )
animation = "idle"

[node name="PowerUpAnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 6 )
animation = "lightning"
frame = 12

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
